--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ plugins {
 	id "org.jetbrains.kotlin.jvm" version "1.1.51"
 }
 
+apply from: "https://github.com/shadowfacts/maven/raw/master/maven.gradle"
+
 repositories {
 	jcenter()
 	maven {
