Move EKT renderer to separate plugin

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,8 @@ group = net.shadowfacts
 archivesBaseName = krypton
 
 kotlin_version = 1.1.51
-ekt_version = 0.1.0-SNAPSHOT
+guava_version = 23.1-jre
+nanohttpd_version = 2.3.1
+snakeyaml_version = 1.18
 
 kotlin.incremental = true
