--- a/build.gradle
+++ b/build.gradle
@@ -15,10 +15,9 @@ dependencies {
 	compile group: "org.jetbrains.kotlin", name: "kotlin-stdlib", version: kotlin_version
 	compile group: "org.jetbrains.kotlin", name: "kotlin-stdlib-jre8", version: kotlin_version
 
-	compile group: "net.shadowfacts", name: "ekt", version: ekt_version
-
-	compile group: "org.nanohttpd", name: "nanohttpd", version: "2.3.1"
-	compile group: "org.yaml", name: "snakeyaml", version: "1.18"
+	compile group: "com.google.guava", name: "guava", version: guava_version
+	compile group: "org.nanohttpd", name: "nanohttpd", version: nanohttpd_version
+	compile group: "org.yaml", name: "snakeyaml", version: snakeyaml_version
 }
 
 compileKotlin {
