--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ repositories {
 dependencies {
 	compile group: "org.jetbrains.kotlin", name: "kotlin-stdlib", version: kotlin_version
 	compile group: "org.jetbrains.kotlin", name: "kotlin-stdlib-jre8", version: kotlin_version
+	compile group: "org.jetbrains.kotlin", name: "kotlin-reflect", version: kotlin_version
 
 	compile group: "com.google.guava", name: "guava", version: guava_version
 	compile group: "org.nanohttpd", name: "nanohttpd", version: nanohttpd_version
